# logiklib

./: .codespellrc  .flake8  .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  release.yml  wheels.yml
logiklib/: __init__.py
logiklib/demo/: README.md  __init__.py
logiklib/demo/K4_N8_6x6/: K4_N8_6x6.py  README.md
logiklib/demo/K6_N8_12x12_BD/: K6_N8_12x12_BD.py  README.md
logiklib/demo/K6_N8_28x28_BD/: K6_N8_28x28_BD.py  README.md
logiklib/demo/K6_N8_3x3/: K6_N8_3x3.py  README.md
logiklib/zeroasic/: __init__.py
logiklib/zeroasic/z1000/: README.md  z1000.json  z1000.py
logiklib/zeroasic/z1002/: README.md  z1002.json  z1002.py
logiklib/zeroasic/z1010/: README.md  z1010.json  z1010.py
logiklib/zeroasic/z1012/: README.md  z1012.json  z1012.py
logiklib/zeroasic/z1060/: README.md  z1060.json  z1060.py
logiklib/zeroasic/z1062/: README.md  z1062.json  z1062.py
tests/: test_fpga_modules.py  test_setup.py
